Name:               timeout
Version:            0.0.0
Synopsis:           Simple interface for IO time operations
Description:        Simple interface for IO time operations
License:            MIT
License-file:       LICENSE
Copyright:          Selectel
Author:             Fedor Gogolev <knsd@knsd.net>
Maintainer:         knsd@knsd.net
Homepage:           https://github.com/selectel/timeout
Bug-reports:        https://github.com/selectel/timeout/issues
Category:           Concurrency, Control
Stability:          Alpha
Build-type:         Simple
Cabal-version:      >= 1.12
Tested-with:        GHC == 7.6.*

Library
    Hs-source-dirs:   src
    Ghc-options:      -Wall -fno-warn-orphans
    Default-language: Haskell2010

    Build-depends:
        base                       == 4.6.* || == 4.5.*
      , time                       == 1.4.*
      , mtl                        == 2.1.* || == 2.0.*
      , exceptions                 == 0.1.*

    Exposed-modules:
        Control.Timeout

Test-suite timeout-tests
    Main-is:          Tests.hs
    Hs-source-dirs:   src, tests
    Default-language: Haskell2010
    Type:             exitcode-stdio-1.0

    Build-depends:
        base                       == 4.6.* || == 4.5.*
      , time                       == 1.4.*
      , mtl                        == 2.1.* || == 2.0.*
      , exceptions                 == 0.1.*

      , test-framework             == 0.8.*
      , test-framework-quickcheck2 == 0.3.*
      , QuickCheck                 == 2.5.*

Source-repository head
    Type:     git
    Location: https://github.com/selectel/timeout
